--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@t4g/ui": ["libs/ui/index.ts"],
       "@t4g/database": ["packages/database/src/index.ts"],
       "@t4g/shared": ["packages/shared/src/index.ts"],
-      "@t4g/types": ["packages/types/src/index.ts"]
+      "@t4g/types": ["packages/types/src/index.ts"],
+      "@t4g/ui-web": ["packages/ui-web/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
