--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,11 @@
       "@t4g/database": ["packages/database/src/index.ts"],
       "@t4g/shared": ["packages/shared/src/index.ts"],
       "@t4g/types": ["packages/types/src/index.ts"],
-      "@t4g/ui-web": ["packages/ui-web/src/index.ts"]
+      "@t4g/ui-web": ["packages/ui-web/src/index.ts"],
+      "@t4g/auth-users": ["packages/auth-users/src/index.ts"],
+      "@t4g/auth-business": ["packages/auth-business/src/index.ts"],
+      "@t4g/auth-admin": ["packages/auth-admin/src/index.ts"],
+      "@t4g/auth-portal": ["packages/auth-portal/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
