--- a/package.json
+++ b/package.json
@@ -90,8 +90,10 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nx/rollup": "^21.3.11",
     "@prisma/client": "6.12.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-router": "^1.130.12",
