--- a/apps/frontends/webapp/project.json
+++ b/apps/frontends/webapp/project.json
@@ -8,12 +8,42 @@
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/frontends/webapp"
+        "outputPath": "dist/apps/frontends/webapp",
+        "tsConfig": "apps/frontends/webapp/tsconfig.app.json"
+      },
+      "configurations": {
+        "development": {
+          "mode": "development"
+        },
+        "production": {
+          "mode": "production"
+        }
       }
     },
     "serve": {
       "executor": "@nx/vite:dev-server",
+      "defaultConfiguration": "development",
+      "options": {
+        "buildTarget": "webapp:build"
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "webapp:build:development",
+          "hmr": true,
+          "port": 4200
+        },
+        "production": {
+          "buildTarget": "webapp:build:production",
+          "hmr": false
+        }
+      }
+    },
+    "preview": {
+      "executor": "@nx/vite:preview-server",
+      "defaultConfiguration": "development",
       "options": {
         "buildTarget": "webapp:build"
       }
