--- a/apps/frontends/webapp/tsconfig.json
+++ b/apps/frontends/webapp/tsconfig.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "esnext",
-    "target": "esnext",
+    "target": "esnext", 
     "jsx": "react-jsx",
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "moduleResolution": "bundler",
     "types": ["vite/client"],
     "baseUrl": ".",
     "paths": {
