--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nx/rollup": "^21.3.11",
-    "@prisma/client": "6.12.0",
+    "@prisma/client": "^6.13.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
