--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/router-cli": "^1.130.15",
+    "@tanstack/router-plugin": "^1.130.15",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
     "@types/react": "^19.0.0",
@@ -105,7 +107,6 @@
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-router": "^1.130.12",
     "@tanstack/router-devtools": "^1.130.13",
-    "@tanstack/router-plugin": "^1.130.15",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
