--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "recharts": "^2.12.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "shadcn": "^2.10.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tw-animate-css": "^1.3.6",
